dnl Initialize the hell package.
AC_INIT(hello.c)
AM_INIT_AUTOMAKE(hell,1.0)

AC_PROG_CC
AC_C_CONST
AC_EXEEXT
AC_PROG_LIBTOOL

if ${CONFIG_SHELL} ./libtool --features | grep "enable static" >/dev/null; then
  STATIC=-static
else
  STATIC=
fi
AC_SUBST(STATIC)

AM_CONDITIONAL(BINARY_HELLDL, [dnl
grep '^global_symbol_pipe=..*$' ./libtool >/dev/null])

AC_CHECK_HEADERS(string.h math.h)

AC_CHECK_LIB(m, cos, LIBADD_M="-lm", LIBADD_M=)
AC_SUBST(LIBADD_M)

dnl Output the makefile
AC_OUTPUT(Makefile)
