dnl Initialize the depdemo package.
AC_INIT(main.c)
AM_INIT_AUTOMAKE(depdemo,0.1)

AC_PROG_CC
AC_EXEEXT
AM_PROG_LIBTOOL

if ${CONFIG_SHELL} ./libtool --features | grep "enable static" >/dev/null; then
  STATIC=-static
else
  STATIC=
fi
AC_SUBST(STATIC)

AC_CHECK_HEADERS(math.h)

AC_CHECK_LIB(m, cos, LIBADD_M="-lm", LIBADD_M=)
AC_SUBST(LIBADD_M)

dnl Output the makefile
AC_OUTPUT(
Makefile
l1/Makefile
l2/Makefile
l3/Makefile
l4/Makefile
)
