dnl Initialize the hell package.
AC_INIT(ltdl.c)
AM_INIT_AUTOMAKE(libltdl,1.0)

AC_PROG_CC
AM_PROG_LIBTOOL

AC_CHECK_HEADERS(string.h dlfcn.h dl.h)

LIBADD_DL=
AC_CHECK_FUNCS(dlopen, AC_DEFINE(HAVE_LIBDL),
[AC_CHECK_LIB(dl, dlopen, [AC_DEFINE(HAVE_LIBDL) LIBADD_DL="-ldl"],
 [AC_CHECK_LIB(dld, dld_link, [AC_DEFINE(HAVE_DLD) LIBADD_DL="-ldld"],
   [AC_CHECK_FUNCS(shl_load, AC_DEFINE(HAVE_SHL_LOAD) )]
  )]
 )]
)
AC_SUBST(LIBADD_DL)

dnl Output the makefile
AC_OUTPUT(Makefile)
